# mongo-docker-example

./: README.md  build.sh  compose.yaml
app/: Dockerfile
app/app/: playground.ipynb  pyproject.toml
app/app/src/app/: data.py  models.py  payload.json
